--- a/src/app/pages/productos/create-producto.component.html
+++ b/src/app/pages/productos/create-producto.component.html
@@ -1,45 +1,44 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="crossorigin="anonymous">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">     
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.min.css">
-<app-sidebar></app-sidebar>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.min.css">
 <body>
+    <app-sidebar></app-sidebar>
     <section>
         <div class="form-box">
             <div class="form-value">
                 <h2>Ingresar Producto</h2>
-                <form id="userForm" >
+                <form id="productForm" (ngSubmit)="IngresarProducto()">
                     <div class="inputbox">
                         <i class="fa-solid fa-pen-to-square"></i>
-                        <input type="text" id="producto" name="producto" #producto required>
-                        <label for="producto">nombre de Producto</label>
-                        
+                        <input type="text" id="name" name="name" [(ngModel)]="producto.name" required>
+                        <label for="name">Nombre de Producto</label>
+                    </div>
+                    <div class="inputbox">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                        <input type="text" id="description" name="description" [(ngModel)]="producto.description" required>
+                        <label for="description">Descripción</label>
                     </div>
                     <div class="inputbox">
                         <i class="fa-solid fa-circle-plus"></i>
-                        <input type="text" id="existencia" name="existencia" #existencia required>
-                        <label for="existencia">Cantidad</label>
+                        <input type="number" id="stock" name="stock" [(ngModel)]="producto.stock" required>
+                        <label for="stock">Stock Inicial</label>
                     </div>
-
-                    <div class="rol-select">
-                        <div class="row-select">
-                            <i class="fa-solid fa-caret-down"></i>
-                        </div>
-                        <i id= "icon-select" class="fa-solid fa-users"></i>
-                        <select id="categoria" name="categoria" #categoria required>
-                            <option *ngFor="let categoria of categorias" value="{{categoria.id_categoria}}" >{{categoria.categoria}}</option>
-                        </select>
-
+                    <div class="inputbox">
+                        <i class="fa-solid fa-dollar-sign"></i>
+                        <input type="number" id="price" name="price" [(ngModel)]="producto.price" required>
+                        <label for="price">Precio</label>
                     </div>
-                    <button (click)="IngresarProducto(producto.value, existencia.value, categoria.value)">Ingresar Producto</button>
-
+                    <button type="submit">Ingresar Producto</button>
                 </form>
             </div>
         </div>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.all.min.js"></script>
-    
-
-
